--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
         </div>
     </div>
 
-    <!-- Include your separate JavaScript file -->
+    <!-- separate JavaScript file -->
     <script src="areaConverter.js"></script>
 </body>
 </html>
