--- a/html/index.html
+++ b/html/index.html
@@ -5,17 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Area Converter</title>
     
-    <!-- Add Bootstrap CSS -->
+    <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Add Bootstrap JavaScript and jQuery (Optional for Bootstrap features) -->
+    <!-- Bootstrap JavaScript and jQuery (Optional for Bootstrap features) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <style>
-        /* Your custom styles here */
-    </style>
 </head>
 <body>
     <div class="container mt-5">
@@ -50,7 +47,7 @@
         </div>
     </div>
 
-    <!-- separate JavaScript file -->
+    <!-- JavaScript file -->
     <script src="areaConverter.js"></script>
 </body>
 </html>
