--- a/html/index.html
+++ b/html/index.html
@@ -44,6 +44,11 @@
                 <input id="marla" class="form-control" type="number" placeholder="ਮਰਲਾ (1/160th Acre)"
                     oninput="areaConverter(this.id, this.value)" onchange="areaConverter(this.id, this.value)">
             </div>
+            <div class="col-md-6 mb-3">
+                <label for="sarsai">ਸਰਸਾਈ (1/9th Marla):</label>
+                <input id="sarsai" class="form-control" type="number" placeholder="ਸਰਸਾਈ (1/9th Marla)"
+                    oninput="areaConverter(this.id, this.value)" onchange="areaConverter(this.id, this.value)">
+            </div>
         </div>
     </div>
 
