--- a/html/index.html
+++ b/html/index.html
@@ -5,17 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Area Converter</title>
     
-    <!-- Add Bootstrap CSS -->
+    <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Add Bootstrap JavaScript and jQuery (Optional for Bootstrap features) -->
+    <!-- Bootstrap JavaScript and jQuery (Optional for Bootstrap features) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <style>
-        /* Your custom styles here */
-    </style>
 </head>
 <body>
     <div class="container mt-5">
@@ -47,10 +44,15 @@
                 <input id="marla" class="form-control" type="number" placeholder="ਮਰਲਾ (1/160th Acre)"
                     oninput="areaConverter(this.id, this.value)" onchange="areaConverter(this.id, this.value)">
             </div>
+            <div class="col-md-6 mb-3">
+                <label for="sarsai">ਸਰਸਾਈ (1/9th Marla):</label>
+                <input id="sarsai" class="form-control" type="number" placeholder="ਸਰਸਾਈ (1/9th Marla)"
+                    oninput="areaConverter(this.id, this.value)" onchange="areaConverter(this.id, this.value)">
+            </div>
         </div>
     </div>
 
-    <!-- Include your separate JavaScript file -->
+    <!-- JavaScript file -->
     <script src="areaConverter.js"></script>
 </body>
 </html>
