working rakba to sarsai

--- a/html/rakba.html
+++ b/html/rakba.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-md-6 mb-3">
                 <label for="rakba">Rakba:</label>
-                <input id="rakba" class="form-control" type="text" placeholder="Enter Rakba (e.g., 13-5-4)">
+                <input id="rakba" class="form-control" type="text" placeholder="Enter Rakba (e.g., 13-5-4)" onchange="rakbaToSarsaiConverter()">
             </div>
             <div class="col-md-6 mb-3">
                 <label for="sarsai">Sarsai:</label>
