--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,23 @@
 
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Area Converter</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Area Conversion <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="rakba.html">Rakba to Sarsai Converter</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    
     <div class="container mt-5">
         <h1 class="mb-4">Area Converter</h1>
         <p>Type a value in any of the fields to convert between area measurements:</p>
